add projects details

--- a/sai-space/index.html
+++ b/sai-space/index.html
@@ -36,8 +36,46 @@
     <section id="projects">
         <h2>Projects</h2>
         <ul>
-            <li><strong>Project 1:</strong> Data Visualization Dashboard (with a link or description)</li>
-            <li><strong>Project 2:</strong> Automated Reporting System</li>
+            <li>
+                <button class="collapsible">Customer Data Onboarding Automation</button>
+                <div class="content">
+                    <p>Automated the end-to-end onboarding process, integrating data from Mixpanel, Amplitude, Salesforce, and more into Snowflake. Created automated reporting systems that delivered reports across Slack, Email, and Telegram with high accuracy.</p>
+                    <p><strong>Tools:</strong> ETL (Apache Spark, AWS Glue), Snowflake, SQL, Slack API, Python</p>
+                    <p><strong>Impact:</strong> Saved 2 weeks of man-hours and reduced costs significantly.</p>
+                </div>
+            </li>
+            <li>
+                <button class="collapsible">Gamification Product Development</button>
+                <div class="content">
+                    <p>Developed a gamification product on Jumbotail's app to create a habit loop for users and increase engagement. Enhanced product recommendations and user retention with sorted product displays.</p>
+                    <p><strong>Tools:</strong> Python, Google Analytics, SQL, A/B Testing</p>
+                    <p><strong>Impact:</strong> Increased order frequency by 25% and visit frequency by 10%.</p>
+                </div>
+            </li>
+            <li>
+                <button class="collapsible">Machine Learning Model for Customer Hub Prediction</button>
+                <div class="content">
+                    <p>Developed a machine learning model to predict customer hubs and optimize product recommendations, improving customer experience.</p>
+                    <p><strong>Tools:</strong> Python (scikit-learn, pandas), SQL, Redshift, EC2</p>
+                    <p><strong>Impact:</strong> Improved customer recommendations and user engagement.</p>
+                </div>
+            </li>
+            <li>
+                <button class="collapsible">Real Estate Optimization on Jumbotail App</button>
+                <div class="content">
+                    <p>Analyzed user behavior and optimized app layout to increase click-through rates and product views. Utilized user behavior patterns to enhance conversion across various product channels.</p>
+                    <p><strong>Tools:</strong> Python, Google Analytics, SQL, Tableau</p>
+                    <p><strong>Impact:</strong> Increased CTR and product views, leading to higher conversions.</p>
+                </div>
+            </li>
+            <li>
+                <button class="collapsible">Survey-Based Brand Study Automation</button>
+                <div class="content">
+                    <p>Automated the report creation process for brand studies using Survey Monkey and social media data from Instagram and Facebook, leading to revenue growth.</p>
+                    <p><strong>Tools:</strong> Python, Survey Monkey API, Facebook and Instagram APIs, SQL</p>
+                    <p><strong>Impact:</strong> Increased revenue by 10% through efficient data reporting.</p>
+                </div>
+            </li>
         </ul>
     </section>
 
@@ -55,11 +93,11 @@
             <a href="https://github.com/sandeepsai2023" target="_blank">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="https://x.com/sandeepsai660" target="_blank">
-                <i class="fab fa-x.com"></i>
-            </a>
             <a href="https://www.instagram.com/your-profile" target="_blank">
                 <i class="fab fa-instagram"></i>
+            </a>            
+            <a href="https://x.com/sandeepsai660" target="_blank">
+                <i class="fab fa-x.com"></i>
             </a>
         </div>
     </footer>
